ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo-bar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 5678
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 5678
